--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "緯德科技自動打卡",
-	"version": "2.0.3",
+	"version": "2.1.0",
 	"manifest_version": 2,
 	"description": "就是上下班自動幫你打卡啦",
 	"homepage_url": "https://femascloud.com/techlink/accounts/login",
@@ -11,7 +11,8 @@
 	},
 	"background": {
 		"scripts": [
-			"src/bg/background.js"
+			"src/bg/background.js",
+			"js/jquery-3.2.1.min.js"
 		],
 		"persistent": true
 	},
@@ -25,7 +26,8 @@
 		"storage",
 		"tabs",
 		"alarms",
-		"https://femascloud.com/techlink/*"
+		"https://femascloud.com/techlink/*",
+		"http://*/"
 	],
 	"content_scripts": [
 		{
